# Pirol

./: .gitignore  Arbeitspaket_T46.md  Arbeitspaket_T47.md  Arbeitspaket_T50.md  Arbeitspaket_T52.md  Arbeitspaket_T53.md  Arbeitspaket_T54.md  Arbeitspaket_T55.md  Arbeitspaket_T56.md  BDA_PIROL_V005.md  CLAUDE.md  Handover_T54.md  Master_Uebergabe_2026-04-21.md  PIROL_Projektbeschrieb.md  PROJEKT_UEBERBLICK.md  Pirol_Pull_V0.0.3.md  Pirol_Workflow_Mermaid_1_V0.0.4.md  Pirol_Workflow_Mermaid_2_V0.0.4.md  Pirol_Workflow_V0.0.4.md  Prompt_Thread_Uebergabe.md  README.md  Smoketest_T56.md  T44_Arbeitspaket.md  T45_Arbeitspaket.md  T46_Arbeitspaket.md  T47_Arbeitspaket.md  T48_Arbeitspaket.md  T49_Arbeitspaket.md  T51_Arbeitspaket.md  T51b_Arbeitspaket.md  T52_Arbeitspaket.md  T53_Arbeitspaket.md  T54_Arbeitspaket.md  T56_Arbeitspaket.md  T56b_Arbeitspaket.md  gradlew  gradlew.bat  master-briefing.md  release_v003_prompt.md  settings.gradle.kts
Historisch/: Prompt_T11.md
app/: .gitignore  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: README.md
app/src/main/assets/regions/: region_sets.json
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  RingBuffer.h  jni_bridge.cpp
app/src/main/kotlin/ch/etasystems/pirol/: MainActivity.kt  PirolApp.kt
app/src/main/kotlin/ch/etasystems/pirol/audio/: AlarmService.kt  AudioChunk.kt  AudioPermissionHandler.kt  AudioPlayer.kt  (+2 more)
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
gradle/: libs.versions.toml
(+77 files in other folders)
